<resources>

    <!-- =================common================ -->
    <string name="app_name">互互</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="forgotpassword">忘记密码</string>
    <string name="changepassword">修改密码</string>
    <string name="username">用户名</string>
    <string name="username2">用户名:</string>
    <string name="password">密码</string>
    <string name="password2">密码:</string>
    <string name="name">姓名</string>
    <string name="name2">姓名:</string>
    <string name="sex">性别</string>
    <string name="sex2">性别:</string>
    <string name="telephone">手机</string>
    <string name="telephone2">手机:</string>
    <string name="email">邮箱</string>
    <string name="email2">邮箱:</string>
    <string name="passwordensure">密码确认</string>
    <string name="passwordensure2">密码确认:</string>
    <string name="please_input_telephone">请输入手机号码</string>
    <string name="please_input_uername">请输入有效账号</string>
    <string name="please_input_password">请输入登录密码</string>
    <string name="please_input_password_ensure">请输入确认密码</string>
    <string name="please_input_provenumber">请输入验证码</string>
    <string name="error_telephone_type">手机号格式错误</string>
    <string name="error_password">密码错误</string>
    <string name="error_username">用户名错误</string>
    <string name="error_provenumber">验证码错误</string>
    <!-- =================主界面================ -->
    <string name="string_found">发现</string>
    <string name="string_hh">互互</string>
    <!-- =================注册================ -->
    <string name="get_now">立即获得</string>
    <string name="hasget_hh">已经拥有互互</string>
    <string name="hint_register_phonenumber">手机号码</string>
    <string name="hint_register_password">登录密码</string>
    <string name="hint_register_password_ensure">确认密码</string>
    <string name="hint_register_provenumber">手机验证码</string>
    <string name="string_register_provenumber_get">获取验证码</string>
    <string name="string_register_provenumber_getagain">重新获取</string>
    <!-- =================引导页================ -->
    <string name="gade01_title">互享&#160;●&#160;互联&#160;●&#160;互生</string>
    <string name="gade02_title">个人名片</string>
    <string name="gade02_message">(淘汰纸质名片,轻松获取人脉)</string>
    <string name="gade03_title">同步更新</string>
    <string name="gade03_message">(再也不用给每个人发新的手机号了)</string>
    <string name="gade04_title">管理人脉</string>
    <string name="gade04_message">(发现机遇,永不丢失)</string>
    <string name="gade05_title">档案印记</string>
    <string name="gade05_message">(职业品牌化,淘汰纸质简历)</string>
    <string name="gade06_title">商职印记</string>
    <string name="gade06_message">(商场人生,职场人生)</string>
    <!-- =================忘记密码================ -->
</resources>